; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/eap_peer/extr_eap.c_eap_get_config_blob.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/eap_peer/extr_eap.c_eap_get_config_blob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_config_blob = type { i32* }
%struct.eap_sm = type { %struct.wpa_config_blob* }

@BLOB_NUM = common dso_local global i32 0, align 4
@BLOB_NAME_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.wpa_config_blob* @eap_get_config_blob(%struct.eap_sm* %0, i8* %1) #0 {
  %3 = alloca %struct.wpa_config_blob*, align 8
  %4 = alloca %struct.eap_sm*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.eap_sm* %0, %struct.eap_sm** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %8 = icmp ne %struct.eap_sm* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store %struct.wpa_config_blob* null, %struct.wpa_config_blob** %3, align 8
  br label %51

10:                                               ; preds = %2
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %47, %10
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* @BLOB_NUM, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %50

15:                                               ; preds = %11
  %16 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %17 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %16, i32 0, i32 0
  %18 = load %struct.wpa_config_blob*, %struct.wpa_config_blob** %17, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds %struct.wpa_config_blob, %struct.wpa_config_blob* %18, i64 %20
  %22 = getelementptr inbounds %struct.wpa_config_blob, %struct.wpa_config_blob* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = icmp eq i32* %23, null
  br i1 %24, label %25, label %26

25:                                               ; preds = %15
  br label %47

26:                                               ; preds = %15
  %27 = load i8*, i8** %5, align 8
  %28 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %29 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %28, i32 0, i32 0
  %30 = load %struct.wpa_config_blob*, %struct.wpa_config_blob** %29, align 8
  %31 = load i32, i32* %6, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds %struct.wpa_config_blob, %struct.wpa_config_blob* %30, i64 %32
  %34 = getelementptr inbounds %struct.wpa_config_blob, %struct.wpa_config_blob* %33, i32 0, i32 0
  %35 = load i32*, i32** %34, align 8
  %36 = load i32, i32* @BLOB_NAME_LEN, align 4
  %37 = call i64 @os_strncmp(i8* %27, i32* %35, i32 %36)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %46

39:                                               ; preds = %26
  %40 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %41 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %40, i32 0, i32 0
  %42 = load %struct.wpa_config_blob*, %struct.wpa_config_blob** %41, align 8
  %43 = load i32, i32* %6, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds %struct.wpa_config_blob, %struct.wpa_config_blob* %42, i64 %44
  store %struct.wpa_config_blob* %45, %struct.wpa_config_blob** %3, align 8
  br label %51

46:                                               ; preds = %26
  br label %47

47:                                               ; preds = %46, %25
  %48 = load i32, i32* %6, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %6, align 4
  br label %11

50:                                               ; preds = %11
  store %struct.wpa_config_blob* null, %struct.wpa_config_blob** %3, align 8
  br label %51

51:                                               ; preds = %50, %39, %9
  %52 = load %struct.wpa_config_blob*, %struct.wpa_config_blob** %3, align 8
  ret %struct.wpa_config_blob* %52
}

declare dso_local i64 @os_strncmp(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
